infra/k8s/comments-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1 # numero de instancias que va crear como default
  selector: # asignar una etiqueta para saber cual pod se va usar
    matchLabels:
      app: comments
  template: # esta es la configuracion del pod que se va usar en el deployment
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: nrv2391/comments
--- # se ponen esos tres guiones para separar la creacion de un nuevo objeto en Kubernetes
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  type: ClusterIP # usar nodeport para desarrollo, para produccion load balancer
  selector:
    app: comments # contenedor o pod que va ejecutar el servicio
  ports:
    - name: comments
      protocol: TCP
      port: 9001 # puerto de salida de la maquina local o servidor o maquina virtual
      targetPort: 9001 # puerto interno del contenedor
