infra/k8s/event-bus-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1 # numero de instancias que va crear como default
  selector: # asignar una etiqueta para saber cual pod se va usar
    matchLabels:
      app: event-bus
  template: # esta es la configuracion del pod que se va usar en el deployment
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: nrv2391/event_bus
--- # se ponen esos tres guiones para separar la creacion de un nuevo objeto en Kubernetes
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  type: ClusterIP # usar nodeport para desarrollo, para produccion load balancer
  selector:
    app: event-bus # contenedor o pod que va ejecutar el servicio
  ports:
    - name: event-bus
      protocol: TCP
      port: 9005 # puerto de salida de la maquina local o servidor o maquina virtual
      targetPort: 9005 # puerto interno del contenedor
