infra/k8s/moderation-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1 # numero de instancias que va crear como default
  selector: # asignar una etiqueta para saber cual pod se va usar
    matchLabels:
      app: moderation
  template: # esta es la configuracion del pod que se va usar en el deployment
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: nrv2391/moderation
--- # se ponen esos tres guiones para separar la creacion de un nuevo objeto en Kubernetes
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  type: ClusterIP # usar nodeport para desarrollo, para produccion load balancer
  selector:
    app: moderation # contenedor o pod que va ejecutar el servicio
  ports:
    - name: moderation
      protocol: TCP
      port: 9006 # puerto de salida de la maquina local o servidor o maquina virtual
      targetPort: 9006 # puerto interno del contenedor
