infra/k8s/post-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1 # numero de instancias que va crear como default
  selector: # asignar una etiqueta para saber cual pod se va usar
    matchLabels:
      app: posts
  template: # esta es la configuracion del pod que se va usar en el deployment
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: nrv2391/posts:latest
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  type: ClusterIP # usar nodeport para desarrollo, para produccion load balancer
  selector:
    app: posts # contenedor o pod que va ejecutar el servicio
  ports:
    - name: posts
      protocol: TCP
      port: 9000 # puerto de salida de la maquina local o servidor o maquina virtual
      targetPort: 9000 # puerto interno del contenedor
